--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,30 @@
-fabric
+astroid==3.3.4
+bcrypt==4.2.1
+cffi==1.17.1
+click==8.1.7
+cryptography==44.0.0
+decorator==5.1.1
+Deprecated==1.2.15
+dill==0.3.9
+distlib==0.3.8
+evdev==1.7.1
+fabric @ git+https://github.com/Fabric-Development/fabric.git@3662e94711d189d25b73e1f0c8cf4cfff8b77902
+filelock==3.16.1
+invoke==2.2.0
+isort==5.13.2
+loguru==0.7.2
+mccabe==0.7.0
+paramiko==3.5.0
+platformdirs==4.3.6
+pycairo==1.27.0
+pycparser==2.22
+PyGObject==3.50.0
+PyGObject-stubs==2.12.0
+pylint==3.3.1
+PyNaCl==1.5.0
+pynput==1.7.6
+python-xlib==0.33
+six==1.16.0
+tomlkit==0.13.2
+virtualenv==20.26.6
+wrapt==1.17.0
