--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ decorator==5.1.1
 Deprecated==1.2.15
 dill==0.3.9
 distlib==0.3.8
-evdev==1.7.1
+#evdev==1.7.1
 fabric @ git+https://github.com/Fabric-Development/fabric.git@3662e94711d189d25b73e1f0c8cf4cfff8b77902
 filelock==3.16.1
 invoke==2.2.0
